Added Map with Map Markers

--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
@@ -30,6 +30,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>pingeb.org would like to use your location.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
