--- a/xamoom-pingeborg-ios/podfile
+++ b/xamoom-pingeborg-ios/podfile
@@ -3,3 +3,4 @@ platform :ios, '8.0'
 pod 'RestKit', '~> 0.24'
 pod 'QRCodeReaderViewController', '~> 2.0.0'
 pod 'SWRevealViewController', '~> 2.3.0'
+pod 'REMenu', '~> 1.10'
