Added youtube Block and changed text and audio block

--- a/xamoom-pingeborg-ios/podfile
+++ b/xamoom-pingeborg-ios/podfile
@@ -2,6 +2,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 pod 'RestKit', '~> 0.24'
 pod 'QRCodeReaderViewController', '~> 2.0.0'
-pod 'SWRevealViewController', '~> 2.3.0'
 pod 'REMenu', '~> 1.10'
 pod 'SMCalloutView'
+pod "youtube-ios-player-helper", "~> 0.1.1"
