--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 xamoom-pingeborg-ios/xamoom-pingeborg-ios/apikey.txt
+xamoom-pingeborg-ios/xamoom-pingeborg-ios/api.txt
 
 xamoom-pingeborg-ios/xamoom-pingeborg-ios.xcworkspace
