--- a/xamoom-pingeborg-ios/podfile
+++ b/xamoom-pingeborg-ios/podfile
@@ -5,3 +5,4 @@ pod 'SMCalloutView'
 pod 'youtube-ios-player-helper', '~> 0.1.1'
 pod 'JGProgressHUD'
 pod 'xamoom-ios-sdk', '~> 1.1.6'
+pod 'Google/Analytics', '~> 1.0.0'
