--- a/xamoom-pingeborg-ios/podfile
+++ b/xamoom-pingeborg-ios/podfile
@@ -4,5 +4,5 @@ pod 'REMenu', '~> 1.10'
 pod 'SMCalloutView'
 pod 'youtube-ios-player-helper', '~> 0.1.1'
 pod 'JGProgressHUD'
-pod 'xamoom-ios-sdk', :path => './../../xamoom-ios-sdk/'
+pod 'xamoom-ios-sdk', :path => '~/dev/xamoom-ios-sdk'
 pod 'Google/Analytics', '~> 1.0.0'
