--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
@@ -43,5 +43,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Access to your camera is needed to scan QR Codes.</string>
 </dict>
 </plist>
