--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
@@ -36,7 +36,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>pingeb.org would like to use your location.</string>
 	<key>UILaunchStoryboardName</key>
-	<string>Main</string>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
