--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ xamoom-pingeborg-ios/xamoom-pingeborg-ios/apikey.txt
 xamoom-pingeborg-ios/xamoom-pingeborg-ios/api.txt
 
 xamoom-pingeborg-ios/xamoom-pingeborg-ios.xcworkspace
+/xamoom-pingeborg-ios/pingeb.org.xcworkspace/xcuserdata/raphaelseher.xcuserdatad/UserInterfaceState.xcuserstate
