--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ xamoom-pingeborg-ios/xamoom-pingeborg-ios/api.txt
 
 xamoom-pingeborg-ios/xamoom-pingeborg-ios.xcworkspace
 /xamoom-pingeborg-ios/pingeb.org.xcworkspace/xcuserdata/raphaelseher.xcuserdatad/UserInterfaceState.xcuserstate
+/fastlane/report.xml
+/pingeb.org.app.dSYM.zip
+/pingeb.org.ipa
