Add NFCHelper for scanning xamoom nfc stickers

--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
@@ -53,5 +53,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>NFCReaderUsageDescription</key>
+	<string>Yo</string>
 </dict>
 </plist>
