--- a/xamoom-pingeborg-ios/podfile
+++ b/xamoom-pingeborg-ios/podfile
@@ -12,5 +12,5 @@ target 'pingeb.org' do
   pod 'XamoomSDK', '~> 3.5.3'
   pod 'XamoomSDK/Push', '~> 3.5.3'
   pod 'Google/Analytics'
-  pod 'QRCodeReaderViewController', '~> 4.0.1'
+  pod 'QRCodeReaderViewController', :path => '~/dev/QRCodeReaderViewController'
 end
