--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Info.plist
@@ -34,9 +34,11 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Access to your camera is needed to scan QR Codes.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We need your location to use iBeacons.</string>
+	<string>We need your location to use iBeacons and notify you about Artists around you.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>pingeb.org would like to use your location.</string>
+	<string>We need your location to use iBeacons and notify you about Artists around you.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We need your location to use iBeacons and notify you about Artists around you.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>We need your permission to save this image to your photo library.</string>
 	<key>Pushwoosh_APPID</key>
